--- a/package.json
+++ b/package.json
@@ -3,14 +3,10 @@
   "productName": "Linux Teams",
   "version": "1.0.0",
   "description": "An unofficial Microsoft Teams application for Linux",
-  "main": "src/main.js",
+  "main": "app/App.js",
   "scripts": {
     "start": "electron .",
     "test": "eslint --ext .js src"
-  },
-  "dependencies": {
-    "electron-about-window": "^1.9.1",
-    "open": "0.0.5"
   },
   "devDependencies": {
     "electron": "1.8.2",
