--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "Electron"
   ],
   "dependencies": {
+    "electron-context-menu": "^0.9.1",
     "electron-window-state": "^4.1.1",
     "lodash.merge": "^4.6.1"
   }
