--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
   },
   "dependencies": {
     "electron-context-menu": "^0.9.1",
-    "electron-window-state": "^4.1.1",
-    "lodash.merge": "^4.6.1"
+    "electron-window-state": "^4.1.1"
   },
   "devDependencies": {
     "electron": "1.8.2",
