--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,178 @@
-# folders
-/node_modules
-/dist
+# ------------------------
+# Project specific
+# ------------------------
 
-# misc
+dist/
+
+# ------------------------
+# Linux
+# ------------------------
+
+# Linux trash folder which might appear on any partition or disk
+.Trash-*
+
+# .nfs files are created when an open file is removed but is still being
+# accessed
+.nfs*
+
+# temporary files which can be created if a process still has a handle open of
+# a deleted file
+.fuse_hidden*
+
+# KDE directory preferences
+.directory
+
+# ------------------------
+# macOS
+# ------------------------
+
+# General
 .DS_Store
+.AppleDouble
+.LSOverride
 
+# Icon must end with two \r
+Icon
+
+# Thumbnails
+._*
+
+# Files that might appear in the root of a volume
+.DocumentRevisions-V100
+.fseventsd
+.Spotlight-V100
+.TemporaryItems
+.Trashes
+.VolumeIcon.icns
+.com.apple.timemachine.donotpresent
+
+# Directories potentially created on remote AFP share
+.AppleDB
+.AppleDesktop
+Network Trash Folder
+Temporary Items
+.apdisk
+
+# ------------------------
+# Windows
+# ------------------------
+
+# Windows thumbnail cache files
+Thumbs.db
+ehthumbs.db
+ehthumbs_vista.db
+
+# Dump file
+*.stackdump
+
+# Folder config file
+[Dd]esktop.ini
+
+# Recycle Bin used on file shares
+$RECYCLE.BIN/
+
+# Windows Installer files
+*.cab
+*.msi
+*.msix
+*.msm
+*.msp
+
+# Windows shortcuts
+*.lnk
+
+# ------------------------
+# Git
+# ------------------------
+
+# Created by git for backups. To disable backups in Git:
+# $ git config --global mergetool.keepBackup false
+*.orig
+
+# Created by git when using merge tools for conflicts
+*.BACKUP.*
+*.BASE.*
+*.LOCAL.*
+*.REMOTE.*
+*_BACKUP_*.txt
+*_BASE_*.txt
+*_LOCAL_*.txt
+*_REMOTE_*.txt
+
+# ------------------------
+# NodeJS
+# ------------------------
+
+# Dependency directory
+node_modules/
+
+# Coverage directory used by tools like istanbul
+coverage/
+
+# TypeScript v1 declaration files
+typings/
+
+# Output of 'npm pack'
+*.tgz
+
+# Optional REPL history
+.node_repl_history
+
+# Optional eslint cache
+.eslintcache
+
+# Optional npm cache directory
+.npm
+
+# Yarn Integrity file
+.yarn-integrity
+
+# Logs
+logs
+*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-*.swp
-*.orig
-*.log*
+# ------------------------
+# vim
+# ------------------------
+
+# Swap
+[._]*.s[a-v][a-z]
+[._]*.sw[a-p]
+[._]s[a-rt-v][a-z]
+[._]ss[a-gi-z]
+[._]sw[a-p]
+
+# Session
+Session.vim
+
+# Temporary
+.netrwhist
+
+# Auto-generated tag files
+tags
+
+# Persistent undo
+[._]*.un~
+
+# ------------------------
+# VisualStudioCode
+# ------------------------
+
+.vscode/*
+!.vscode/launch.json
+.history
+
+# ------------------------
+# WebStorm
+# ------------------------
+
+.idea/
+*.iws
+*.iml
+*.ipr
+modules.xml
+
+# Based on https://www.gitignore.io/api/linux,macos,windows,git,node,vim,visualstudiocode,webstorm
