--- a/package.json
+++ b/package.json
@@ -1,66 +1,96 @@
 {
   "name": "linux-teams",
-  "productName": "Linux Teams",
-  "version": "1.3.0",
+  "productName": "linux-teams",
+  "version": "2.0.0",
   "description": "An unofficial Microsoft Teams application for Linux",
-  "main": "app/App.js",
+  "license": "MIT",
+  "main": "app/main.js",
   "scripts": {
+    "postinstall": "electron-builder install-app-deps",
+    "clean": "rm -rf dist",
+    "prebuild": "npm run -s clean",
+    "build": "electron-builder --linux",
+    "pack": "electron-builder --dir",
     "start": "electron .",
-    "test": "eslint --ext .js src",
-    "build": "electron-builder"
+    "lint": "eslint ./app",
+    "format": "prettier --write \"./**/*.{hmtl,css,js,json,md}\""
   },
   "dependencies": {
-    "electron-context-menu": "^0.9.1",
-    "electron-window-state": "^4.1.1"
+    "electron-context-menu": "~0.13.0",
+    "electron-store": "^4.0.0",
+    "electron-window-state": "^5.0.3",
+    "semver": "^6.3.0"
   },
   "devDependencies": {
-    "electron": "1.8.2",
-    "electron-builder": "~20.0.4",
-    "eslint": "^4.17.0",
-    "eslint-config-standard": "^11.0.0-beta.0",
-    "eslint-plugin-import": "^2.8.0",
-    "eslint-plugin-node": "^6.0.0",
-    "eslint-plugin-promise": "^3.6.0",
-    "eslint-plugin-standard": "^3.0.1"
+    "electron": "^6.0.1",
+    "electron-builder": "^21.1.1",
+    "eslint": "^6.1.0",
+    "eslint-config-prettier": "^6.0.0",
+    "eslint-plugin-prettier": "^3.1.0",
+    "prettier": "^1.18.2"
   },
   "build": {
     "appId": "com.github.arslivinski.linux-teams",
-    "files": [
-      "assets/**/*",
-      "app/**/*"
-    ],
     "linux": {
-      "category": "Network;Chat",
+      "category": "Network;InstantMessaging",
       "packageCategory": "net",
-      "executableName": "LinuxTeams",
-      "synopsis": "Linux Teams",
+      "executableName": "linux-teams",
+      "synopsis": "Microsoft Teams Client",
       "description": "An unofficial Microsoft Teams application for Linux",
       "desktop": {
         "Name": "Linux Teams",
         "Comment": "An unofficial Microsoft Teams application for Linux",
-        "StartupWMClass": "Linux Teams"
+        "StartupWMClass": "linux-teams",
+        "Type": "Application",
+        "Terminal": false
       },
       "target": [
-        "tar.gz",
+        "AppImage",
+        "deb",
         "rpm",
-        "deb"
+        "tar.gz"
       ]
     }
   },
-  "author": "Anderson Slivinski <arslivinski@gmail.com>",
-  "license": "MIT",
-  "homepage": "https://github.com/arslivinski/linux-teams#readme",
+  "eslintConfig": {
+    "parserOptions": {
+      "ecmaVersion": 2019
+    },
+    "env": {
+      "es6": true,
+      "browser": true,
+      "node": true
+    },
+    "extends": [
+      "eslint:recommended",
+      "plugin:prettier/recommended"
+    ]
+  },
+  "prettier": {
+    "endOfLine": "lf",
+    "trailingComma": "all"
+  },
+  "author": {
+    "name": "Anderson Slivinski",
+    "email": "arslivinski@gmail.com",
+    "url": "https://github.com/arslivinski"
+  },
+  "homepage": "https://github.com/arslivinski/xteams#readme",
   "bugs": {
-    "url": "https://github.com/arslivinski/linux-teams/issues"
+    "url": "https://github.com/arslivinski/xteams/issues"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/arslivinski/linux-teams.git"
+    "url": "git+https://github.com/arslivinski/xteams.git"
   },
   "keywords": [
     "Microsoft Teams",
+    "MS Teams",
     "Teams",
+    "client",
     "Linux",
+    "Ubuntu",
+    "Fedora",
     "Electron"
   ]
 }
